force-app/main/default/objects/Product2/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>This field is checks if the product is still active or not by looking at the end date. It is used in scheduled flow to select the standard salesforce checkbox field &quot;active&quot; to true or false depending on this checkbox.</description>
    <formula>IF( TODAY() &lt;= DATEVALUE(End_Date__c), true,
IF(ISBLANK(DATEVALUE(End_Date__c)), true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active (helpfield)</label>
    <type>Checkbox</type>
</CustomField>