force-app/main/default/objects/Product2/fields/End_Date_TEXT__c.field-meta.xml
<CustomField>
    <fullName>End_Date_TEXT__c</fullName>
    <label>End Date (TEXT)</label>
    <length>90</length>
    <type>Text</type>
</CustomField>