force-app/main/default/objects/Product2/fields/EOL_ID_PRODUCTS__c.field-meta.xml
<CustomField>
    <fullName>EOL_ID_PRODUCTS__c</fullName>
    <externalId>true</externalId>
    <label>EOL ID PRODUCTS</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>