force-app/main/default/objects/Product2/fields/In_Salesforce_before_Product_Sync__c.field-meta.xml
<CustomField>
    <fullName>In_Salesforce_before_Product_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Salesforce before Product Sync</label>
    <type>Checkbox</type>
</CustomField>