force-app/main/default/objects/Product2/fields/IsSalesItem__c.field-meta.xml
<CustomField>
    <fullName>IsSalesItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSalesItem</label>
    <type>Checkbox</type>
</CustomField>