force-app/main/default/objects/Product2/fields/Product_Code_EOL__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_EOL__c</fullName>
    <externalId>true</externalId>
    <label>Product Code EOL</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>