force-app/main/default/objects/Product2/fields/Product_Family_Shadow_Field__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Shadow_Field__c</fullName>
    <label>ItemGroupCodeDescription</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>df07afb3-7847-4fb3-8ce3-a61a926f415d</fullName>
            </value>
            <value>
                <fullName>6b0f6704-6249-4a45-8813-a6005287dd0e</fullName>
            </value>
            <value>
                <fullName>9d87c808-9187-4761-bc96-f1a25cfaf63e</fullName>
            </value>
            <value>
                <fullName>7107c540-1947-42c0-9c78-ccd0021468a9</fullName>
            </value>
            <value>
                <fullName>458781b3-1772-4a30-92f8-6b0fbfef175c</fullName>
            </value>
            <value>
                <fullName>b3ec9e2a-9722-4189-a179-d92a5af9157f</fullName>
            </value>
            <value>
                <fullName>84b48f2c-273c-447f-9abf-36c92c3c6dca</fullName>
            </value>
            <value>
                <fullName>bf0f6da8-4691-46f3-ae05-25c1e3ecc679</fullName>
            </value>
            <value>
                <fullName>23ac9475-3832-4c5e-ab82-6add071d80f1</fullName>
            </value>
            <value>
                <fullName>25664796-9594-4a41-ad4f-951cf4db240a</fullName>
            </value>
            <value>
                <fullName>cfba85b8-90f9-4517-bc43-fc6f86055904</fullName>
            </value>
            <value>
                <fullName>3dfb940d-2699-458f-821d-9fab7b3a982d</fullName>
            </value>
            <value>
                <fullName>4aaba7c8-685e-455d-a99e-05bd04139d13</fullName>
            </value>
            <value>
                <fullName>792ba567-fa9d-4681-a500-f60bc09aef8e</fullName>
            </value>
            <value>
                <fullName>b41a6dea-5411-4450-b2cc-93d87d5f2fc2</fullName>
            </value>
            <value>
                <fullName>b5aa2304-e200-4eec-a356-7597b9e7e4bb</fullName>
            </value>
            <value>
                <fullName>95a770c8-7a23-4034-a286-7e46475046c5</fullName>
            </value>
            <value>
                <fullName>025a1b78-ac64-4405-93f8-6a75cc7c4cde</fullName>
            </value>
            <value>
                <fullName>21cafffa-4c10-417d-b8f8-8b91761634b9</fullName>
            </value>
            <value>
                <fullName>c64d40c0-dd49-40c8-a10f-497b9c629a4e</fullName>
            </value>
            <value>
                <fullName>245ebec5-1979-4152-b270-bd978cd667af</fullName>
            </value>
            <value>
                <fullName>f13d1335-0a34-4c58-a79b-87ed2a116890</fullName>
            </value>
            <value>
                <fullName>e1d8c034-5bf4-4552-86d6-452174023356</fullName>
            </value>
            <value>
                <fullName>32d6c431-4f31-4889-a1e8-e6836d34e3ec</fullName>
            </value>
            <value>
                <fullName>fa7ecda9-d38e-41eb-afd2-e76199edf392</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>