force-app/main/default/objects/Product2/fields/Product_NEW__c.field-meta.xml
<CustomField>
    <fullName>Product_NEW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product NEW</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>