force-app/main/default/objects/Product2/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>DATETIMEVALUE(&quot;1970-1-1 00:00:00&quot;) +


((0.001 * VALUE( MID(Start_Date_TEXT__c, 7, 13)) ) / 86400 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>