force-app/main/default/objects/Product2/fields/Start_Date_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_TEXT__c</fullName>
    <label>Start Date (TEXT)</label>
    <length>90</length>
    <type>Text</type>
</CustomField>