force-app/main/default/objects/Product2/fields/Stock_Count_ID__c.field-meta.xml
<CustomField>
    <fullName>Stock_Count_ID__c</fullName>
    <label>Stock Count ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>