force-app/main/default/objects/Product2/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>